landing page, data mapping, first look of quizboard generation, auth guards

--- a/QuizApi/appsettings.json
+++ b/QuizApi/appsettings.json
@@ -4,6 +4,11 @@
     "DatabaseName": "quiz",
     "QuestionsCollectionName": "questions"
   },
+  "QuizboardsDatabase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "quiz",
+    "QuizboardsCollectionName": "quizboards"
+  },
   "AccountDatabase": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "quiz",
